# flight-tracker-pipeline

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
src/lambdas/fetch_flight_list/: lambda_function.py
src/lambdas/fetch_flight_list/tests/: test_fetch_flight_list.py
src/lambdas/process_single_flight/: lambda_function.py  payload.json
src/lambdas/process_single_flight/tests/: test_process_single_flight.py
src/step_function/: state_machine.json
